--- a/materialize/css/materialize.css
+++ b/materialize/css/materialize.css
@@ -2542,10 +2542,10 @@ th {
   padding: 0;
 }
 
-html {
+/* html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-}
+} */
 
 *, *:before, *:after {
   -webkit-box-sizing: inherit;
